--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{% block title %}{% endblock %} • Bookshelf!</title>
+	<title>Bookshelf!</title>
 </head>
 <body>
-	{% block body %}
-		
-	{% endblock %}
+	<h1 id="hello"></h1>
 </body>
+<script src="index.js"></script>
 </html>
